# customQTPluginDemo

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
plugins/: CMakeLists.txt  CustomPlugin.cpp  CustomPlugin.h
src/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h  PluginInterface.h  main.cpp
